--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ kramdown:
 owner:
   name: Rona Rosita
   avatar: bio-photo.jpg
-  bio: "Describe your self."
+  bio: "Information System."
   email: 
   disqus-shortname: 
   twitter: Rona Rosita #username
