--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 # Site owner
 owner:
   name: Rona Rosita
-  avatar: bio-photo.jpg
+  avatar: ronaedit.jpg
   bio: "Information System."
   email: 
   disqus-shortname: 
