--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,9 @@ kramdown:
 owner:
   name: Rona Rosita
   avatar: ronaedit.jpg
-  bio: "Information System."
-  email: 
+  bio: "Information System'13.
+  Uin Suska Riau, Fakultas Sains & Tekhnologi"
+  email: ronarosita12@gmail.com
   disqus-shortname: 
   twitter: Rona Rosita #username
   facebook: Rona Rosita #username
