--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ owner:
   disqus-shortname: 
   twitter: Rona Rosita #username
   facebook: Rona Rosita #username
+  Uin Suska Riau: http://uin-suska.ac.id/
   google:
     plus: Pekanbaru #username
     analytics: 
