--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ kramdown:
 owner:
   name: Rona Rosita
   avatar: ronaedit.jpg
-  bio: "Information System'13.
-  Uin Suska Riau, Fakultas Sains & Tekhnologi"
+  bio: <a href= "http://uin-suska.ac.id">UIN SUSKA RIAU</a>
+  <a href= "http://sif.uin-suska.ac.id">Information System</>
   email: ronarosita12@gmail.com
   disqus-shortname: 
   twitter: Rona Rosita #username
