--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ kramdown:
 owner:
   name: Rona Rosita
   avatar: ronaedit.jpg
-  bio: <a href= "http://uin-suska.ac.id">UIN SUSKA RIAU</a>
+  bio: <a href= "http://uin-suska.ac.id">UIN SUSKA RIAU</a>/<a href= "http://sif.uin-suska.ac.id/">Information System</a>
   email: ronarosita12@gmail.com
   disqus-shortname: 
   twitter: Rona Rosita #username
